# gentzen

./: Cargo.toml  ci.sh
examples/: classical_linear_logic.rs
src/: ast.rs  infer.rs  inference.rs  lib.rs  multiset.rs  proof.rs  rule.rs  sequent.rs  sequents.rs  test.rs  thunk.rs  tree.rs  turnstile.rs
src/sequents/: intuitionist_with_exchange.rs  mod.rs  rhs_only_with_exchange.rs
